# test_repo

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: test.ipynb
test_module/: __init__.py  dataset.py  features.py  plots.py
test_module/modeling/: predict.py  train.py
