[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "test_module"
version = "0.0.1"
description = "Test description."
authors = [
  { name = "Name Surname" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["test_module"]
force_sort_within_sections = true

[tool.poetry.dependencies]
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
pandera = "^0.23.0"
loguru = "^0.7.3"
mkdocs = "^1.6.1"
tqdm = "^4.67.1"
typer = "^0.15.2"
scipy = "^1.15.2"
statsmodels = "^0.14.4"
isort = "^6.0.1"
scikit-learn = "^1.6.1"
black = "^25.1.0"
dotenv = "^0.9.9"
